--- a/retail_sales.ipynb
+++ b/retail_sales.ipynb
@@ -147,6 +147,7 @@
     }
    ],
    "source": [
+    "#taking a peek at the first few rows\n",
     "df.head()"
    ]
   },
@@ -274,6 +275,7 @@
     }
    ],
    "source": [
+    "#viewing the last five rows\n",
     "df.tail()"
    ]
   },
@@ -320,6 +322,7 @@
     }
    ],
    "source": [
+    "# Summary of the data\n",
     "df.describe"
    ]
   },
@@ -352,6 +355,7 @@
     }
    ],
    "source": [
+    "#information of dataset\n",
     "df.info()"
    ]
   },
@@ -566,6 +570,7 @@
     }
    ],
    "source": [
+    "#identify missing values\n",
     "df.isnull()"
    ]
   },
@@ -595,6 +600,7 @@
     }
    ],
    "source": [
+    "#count number of missing values in each column\n",
     "df.isnull().sum()"
    ]
   },
@@ -810,6 +816,28 @@
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# converting columns to lowercase and space replace with (_)\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m df\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mstr\u001b[38;5;241m.\u001b[39mlower()\u001b[38;5;241m.\u001b[39mstr\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# converting columns to lowercase and space replace with (_)\n",
+    "df.columns = df.columns.str.lower().str.replace(' ', '_')"
    ]
   },
   {
